# cloth

./: CMakeLists.txt  README.md
shaders/: fragment.glsl  vertex.glsl
src/: ball.cpp  ball.hpp  cloth.cpp  cloth.hpp  constraint.cpp  constraint.hpp  main.cpp  particle.cpp  particle.hpp  shader.cpp  shader.hpp  state.hpp  vertex.hpp
